idea 2026 is the base one. All code updated. Minimal version is 2024.2